@@ -1,9 +1,9 @@
 package com.zufar.icedlatte.order.api;
 
-import com.zufar.icedlatte.openapi.dto.OrderDto;
+import com.zufar.icedlatte.openapi.dto.OrderPageDto;
 import com.zufar.icedlatte.openapi.dto.OrderStatus;
-import com.zufar.icedlatte.order.converter.OrderDtoConverter;
 import com.zufar.icedlatte.order.entity.Order;
+import com.zufar.icedlatte.order.entity.OrderItem;
 import com.zufar.icedlatte.order.repository.OrderRepository;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -11,75 +11,89 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.domain.Specification;
 
+import java.math.BigDecimal;
+import java.time.OffsetDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.Mockito.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 @DisplayName("OrdersProvider unit tests")
+@SuppressWarnings("unchecked")
 class OrdersProviderTest {
 
     @Mock
     private OrderRepository orderRepository;
-    @Mock
-    private OrderDtoConverter orderDtoConverter;
     @InjectMocks
     private OrdersProvider ordersProvider;
 
-    private final UUID userId = UUID.randomUUID();
+    private static final UUID USER_ID = UUID.randomUUID();
+    private static final Pageable PAGEABLE = PageRequest.of(0, 10);
 
     @Test
-    @DisplayName("Returns all orders when statuses list is null")
-    void getOrders_nullStatuses_returnsAll() {
-        Order order = new Order();
-        OrderDto dto = new OrderDto();
-        when(orderRepository.findAllByUserId(userId)).thenReturn(List.of(order));
-        when(orderDtoConverter.toResponseDto(order)).thenReturn(dto);
+    @DisplayName("Returns paginated orders with summary DTOs")
+    void getOrdersReturnsPaginatedResults() {
+        Order order = buildOrder();
+        when(orderRepository.findAll(any(Specification.class), eq(PAGEABLE)))
+                .thenReturn(new PageImpl<>(List.of(order), PAGEABLE, 1));
 
-        List<OrderDto> result = ordersProvider.getOrders(userId, null);
+        OrderPageDto result = ordersProvider.getOrders(USER_ID, null, null, null, null, PAGEABLE);
 
-        assertThat(result).containsExactly(dto);
-        verify(orderRepository).findAllByUserId(userId);
-        verify(orderRepository, never()).findAllByUserIdAndStatusIn(any(), any());
+        assertThat(result.getTotalElements()).isEqualTo(1);
+        assertThat(result.getContent()).hasSize(1);
+        assertThat(result.getContent().getFirst().getFirstItemName()).isEqualTo("Nitro Cold Brew");
+        assertThat(result.getContent().getFirst().getItemCount()).isEqualTo(1);
     }
 
     @Test
-    @DisplayName("Returns all orders when statuses list is empty")
-    void getOrders_emptyStatuses_returnsAll() {
-        when(orderRepository.findAllByUserId(userId)).thenReturn(List.of());
+    @DisplayName("Returns empty page when no orders match")
+    void getOrdersReturnsEmptyPage() {
+        when(orderRepository.findAll(any(Specification.class), eq(PAGEABLE)))
+                .thenReturn(new PageImpl<>(Collections.emptyList(), PAGEABLE, 0));
 
-        List<OrderDto> result = ordersProvider.getOrders(userId, List.of());
+        OrderPageDto result = ordersProvider.getOrders(USER_ID, null, null, null, null, PAGEABLE);
 
-        assertThat(result).isEmpty();
-        verify(orderRepository).findAllByUserId(userId);
+        assertThat(result.getTotalElements()).isZero();
+        assertThat(result.getContent()).isEmpty();
     }
 
     @Test
-    @DisplayName("Filters by status when statuses list is provided")
-    void getOrders_withStatuses_filtersCorrectly() {
-        Order order = new Order();
-        OrderDto dto = new OrderDto();
-        List<OrderStatus> statuses = List.of(OrderStatus.CREATED);
-        when(orderRepository.findAllByUserIdAndStatusIn(userId, statuses)).thenReturn(List.of(order));
-        when(orderDtoConverter.toResponseDto(order)).thenReturn(dto);
+    @DisplayName("Passes status filter through to specification")
+    void getOrdersWithStatusFilter() {
+        when(orderRepository.findAll(any(Specification.class), eq(PAGEABLE)))
+                .thenReturn(new PageImpl<>(Collections.emptyList(), PAGEABLE, 0));
 
-        List<OrderDto> result = ordersProvider.getOrders(userId, statuses);
+        OrderPageDto result = ordersProvider.getOrders(USER_ID, List.of(OrderStatus.PAID), null, null, null, PAGEABLE);
 
-        assertThat(result).containsExactly(dto);
-        verify(orderRepository).findAllByUserIdAndStatusIn(userId, statuses);
-        verify(orderRepository, never()).findAllByUserId(any());
+        assertThat(result.getTotalElements()).isZero();
     }
 
-    @Test
-    @DisplayName("Returns empty list when no orders found for user")
-    void getOrders_noOrders_returnsEmpty() {
-        when(orderRepository.findAllByUserId(userId)).thenReturn(List.of());
-
-        List<OrderDto> result = ordersProvider.getOrders(userId, null);
-
-        assertThat(result).isEmpty();
+    private Order buildOrder() {
+        OrderItem item = OrderItem.builder()
+                .id(UUID.randomUUID())
+                .productName("Nitro Cold Brew")
+                .productPrice(BigDecimal.TEN)
+                .productsQuantity(1)
+                .build();
+        Order order = Order.builder()
+                .id(UUID.randomUUID())
+                .userId(USER_ID)
+                .status(OrderStatus.CREATED)
+                .items(List.of(item))
+                .itemsQuantity(1)
+                .itemsTotalPrice(BigDecimal.TEN)
+                .build();
+        order.setCreatedAt(OffsetDateTime.now());
+        return order;
     }
 }
